@@ -3,7 +3,9 @@
 	* src/av-cp/playlist-treeview.c:
 	* src/av-cp/playlist-treeview.h:
 
-	get_selected_item() returns a boolean indicating success.
+	- get_selected_item() returns a boolean indicating success.
+	- Set the renderer's state to STOPPED if a non-item is selected while
+	  the renderer's state is set to PLAYING/PAUSED.
 
 	* src/av-cp/renderer-controls.c:
 	* src/av-cp/renderer-controls.h:
